--- a/LOL Item Sets/Base.lproj/Main.storyboard
+++ b/LOL Item Sets/Base.lproj/Main.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.Storyboard.XIB" version="3.0" toolsVersion="11542" systemVersion="16B2555" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" initialViewController="B8D-0N-5wS">
+<document type="com.apple.InterfaceBuilder3.Cocoa.Storyboard.XIB" version="3.0" toolsVersion="12118" systemVersion="16E195" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" initialViewController="B8D-0N-5wS">
     <dependencies>
         <deployment identifier="macosx"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="11542"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="12118"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
         <capability name="system font weights other than Regular or Bold" minToolsVersion="7.0"/>
     </dependencies>
@@ -33,6 +33,12 @@
                                             <modifierMask key="keyEquivalentModifierMask"/>
                                             <connections>
                                                 <action selector="deleteInstalledItemSets:" target="Voe-Tx-rLC" id="jfN-Zn-azh"/>
+                                            </connections>
+                                        </menuItem>
+                                        <menuItem title="Open at login" id="A7F-Yj-Yw5">
+                                            <modifierMask key="keyEquivalentModifierMask"/>
+                                            <connections>
+                                                <action selector="changeOpenAtLogin:" target="Voe-Tx-rLC" id="q0e-mx-o1m"/>
                                             </connections>
                                         </menuItem>
                                         <menuItem isSeparatorItem="YES" id="VOq-y0-SEH"/>
@@ -110,7 +116,11 @@
                         <outlet property="delegate" destination="Voe-Tx-rLC" id="PrD-fu-P6m"/>
                     </connections>
                 </application>
-                <customObject id="Voe-Tx-rLC" customClass="AppDelegate" customModule="LOL_Item_Sets" customModuleProvider="target"/>
+                <customObject id="Voe-Tx-rLC" customClass="AppDelegate" customModule="LOL_Item_Sets" customModuleProvider="target">
+                    <connections>
+                        <outlet property="openAtLoginMenuItem" destination="A7F-Yj-Yw5" id="wgd-7e-Sab"/>
+                    </connections>
+                </customObject>
                 <customObject id="Ady-hI-5gd" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
                 <customObject id="dMz-Qb-4Ob" customClass="SUUpdater"/>
             </objects>
@@ -152,7 +162,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="480" height="290"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <subviews>
-                            <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="cI2-gQ-3Yg">
+                            <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" allowsCharacterPickerTouchBarItem="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cI2-gQ-3Yg">
                                 <rect key="frame" x="18" y="246" width="211" height="24"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="207" id="qYH-PH-QqX"/>
@@ -164,7 +174,7 @@
                                     <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                                 </textFieldCell>
                             </textField>
-                            <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="ogQ-3N-YsC">
+                            <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" allowsCharacterPickerTouchBarItem="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ogQ-3N-YsC">
                                 <rect key="frame" x="251" y="246" width="211" height="24"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="24" id="VZL-TT-vvw"/>
@@ -215,7 +225,7 @@
                                     <action selector="installItemSets:" target="XfG-lQ-9wD" id="AP3-yJ-92T"/>
                                 </connections>
                             </button>
-                            <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="ru2-O5-Ivg" customClass="LinkTextLabel" customModule="LOL_Item_Sets" customModuleProvider="target">
+                            <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" allowsCharacterPickerTouchBarItem="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ru2-O5-Ivg" customClass="LinkTextLabel" customModule="LOL_Item_Sets" customModuleProvider="target">
                                 <rect key="frame" x="93" y="20" width="88" height="17"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="84" id="1h7-Ag-SXK"/>
@@ -230,7 +240,7 @@
                                     <userDefinedRuntimeAttribute type="string" keyPath="URL" value="https://lol-item-sets-generator.org/"/>
                                 </userDefinedRuntimeAttributes>
                             </textField>
-                            <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="ZR6-RT-dyg" customClass="LinkTextLabel" customModule="LOL_Item_Sets" customModuleProvider="target">
+                            <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" allowsCharacterPickerTouchBarItem="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZR6-RT-dyg" customClass="LinkTextLabel" customModule="LOL_Item_Sets" customModuleProvider="target">
                                 <rect key="frame" x="185" y="20" width="110" height="17"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="106" id="3ql-7z-JOR"/>
@@ -245,7 +255,7 @@
                                     <userDefinedRuntimeAttribute type="string" keyPath="URL" value="https://github.com/Ilshidur/LoL-item-sets-Mac"/>
                                 </userDefinedRuntimeAttributes>
                             </textField>
-                            <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="Muw-T9-cpX" customClass="LinkTextLabel" customModule="LOL_Item_Sets" customModuleProvider="target">
+                            <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" allowsCharacterPickerTouchBarItem="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Muw-T9-cpX" customClass="LinkTextLabel" customModule="LOL_Item_Sets" customModuleProvider="target">
                                 <rect key="frame" x="299" y="20" width="70" height="17"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="17" id="OFn-00-PLB"/>
@@ -260,7 +270,7 @@
                                     <userDefinedRuntimeAttribute type="string" keyPath="URL" value="https://github.com/Ilshidur/LoL-item-sets-Mac/blob/master/CHANGELOG.md"/>
                                 </userDefinedRuntimeAttributes>
                             </textField>
-                            <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="YEl-Da-goN">
+                            <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" allowsCharacterPickerTouchBarItem="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YEl-Da-goN">
                                 <rect key="frame" x="383" y="3" width="96" height="17"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="92" id="5Rp-aY-UZR"/>
@@ -293,7 +303,7 @@
                                     <action selector="autoCheckChanged:" target="XfG-lQ-9wD" id="hu7-nw-8my"/>
                                 </connections>
                             </button>
-                            <textField hidden="YES" verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="cve-b0-b9K">
+                            <textField hidden="YES" verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" fixedFrame="YES" allowsCharacterPickerTouchBarItem="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cve-b0-b9K">
                                 <rect key="frame" x="18" y="45" width="444" height="88"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                 <textFieldCell key="cell" sendsActionOnEndEditing="YES" borderStyle="bezel" title="Nothing to see here... :|" allowsEditingTextAttributes="YES" id="TLl-Zg-qce">
@@ -302,7 +312,7 @@
                                     <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                                 </textFieldCell>
                             </textField>
-                            <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="lcI-Aj-UIm">
+                            <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" allowsCharacterPickerTouchBarItem="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lcI-Aj-UIm">
                                 <rect key="frame" x="18" y="224" width="211" height="14"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="207" id="BHs-JL-h4o"/>
@@ -314,7 +324,7 @@
                                     <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                                 </textFieldCell>
                             </textField>
-                            <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="bfC-Ct-OyX">
+                            <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" allowsCharacterPickerTouchBarItem="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bfC-Ct-OyX">
                                 <rect key="frame" x="263" y="224" width="199" height="14"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="195" id="GqG-Mv-zyE"/>
